--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,10 @@ android {
 }
 
 dependencies {
-    implementation(libs.hilt.android)
+    implementation libs.hilt.android
     ksp(libs.hilt.compiler)
-
+    implementation libs.compose.destinations.core
+    ksp(libs.compose.destinations.compiler)
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
