--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     ksp(libs.hilt.compiler)
     implementation libs.compose.destinations.core
     ksp(libs.compose.destinations.compiler)
+    implementation libs.retrofit
+    implementation libs.retrofit.gson
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
