--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,14 @@ android {
 dependencies {
     implementation libs.hilt.android
     ksp(libs.hilt.compiler)
+    implementation libs.hilt.navigation.compose
     implementation libs.compose.destinations.core
     ksp(libs.compose.destinations.compiler)
     implementation libs.retrofit
     implementation libs.retrofit.gson
+    implementation libs.logging.interceptor
+    implementation libs.coroutines.core
+    implementation libs.coroutines.android
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
