--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
     alias(libs.plugins.ksp)
     alias(libs.plugins.hilt)
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -57,6 +58,7 @@ dependencies {
     implementation libs.retrofit
     implementation libs.retrofit.gson
     implementation libs.logging.interceptor
+    implementation libs.coil
     implementation libs.coroutines.core
     implementation libs.coroutines.android
     implementation libs.androidx.core.ktx
