--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation libs.coroutines.core
     implementation libs.coroutines.android
     implementation libs.exoplayer
+    implementation libs.datastore.preferences
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
